# cpp-gtest-dp-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: cube.cpp  cube.h
tests/: CMakeLists.txt  TestDataProvider.cpp  TestDataProvider.h  test.cpp  test.h
